Remove peek and rework test assertations